# game_engine1

./: .gitignore  CMakeLists.txt  README.md  composition.cpp  composition.h  draw_call.cpp  draw_call.h  game_engine1.pro  ge1.pri  main.cpp  pass.cpp  program.cpp  program.h  resources.h  span.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_vector.cpp  vertex_vector.h
include/ge1/: algorithm.h  buffer_vector.h  composition.h  draw_call.h  framebuffer.h  memory.h  pass.h  program.h  renderable.h  resources.h  shader_module.h  span.h  vertex_array.h
include/ge1/editor/: editor_camera.h  editor_io.h  introspection.h  introspection_glm.h  reflection.h
include/ge1/editor/backends/: ge1_imgui.h  glfw.h
notes/: interfaces.txt  overview 2.txt  overview.txt  untyped overview.txt  vertex access sketch.cpp
shaders/: solid.fs  solid.vs  utils.fs
source/: algorithm.cpp  composition.cpp  draw_call.cpp  framebuffer.cpp  pass.cpp  program.cpp  vertex_array.cpp
source/editor/: editor_camera.cpp
source/editor/backends/: glfw.cpp
source/opengl/: draw_call.cpp  framebuffer.cpp  program.cpp  vertex_array.cpp
source/vulkan/: memory.cpp  shader_module.cpp
typed/: glm_types.h  primitive_types.h  vertex_array.h
